# gw-cli

./: README.md  pyproject.toml
auth/: oauth21_session_store.py  oauth_callback_server.py  oauth_responses.py  service_decorator.py
core/: comments.py  server.py  tool_tiers.yaml
docs/superpowers/specs/: 2026-03-30-gw-cli-migration-design.md
gdocs/: docs_helpers.py  docs_tools.py
gdocs/managers/: batch_operation_manager.py
gdrive/: drive_tools.py
gsheets/: __init__.py  sheets_helpers.py  sheets_tools.py
gslides/: slides_tools.py
gw/: __init__.py  __main__.py  auth.py  output.py
gw/cli/: calendar.py  comments.py  docs.py  drive.py  forms.py  gmail.py  sheets.py  slides.py
gw/services/: calendar.py  comments.py  docs.py  drive.py  forms.py  gmail.py  sheets.py  slides.py
gw/services/_helpers/: docs_helpers.py  docs_markdown.py  drive_helpers.py  sheets_helpers.py
gw/services/_helpers/docs_managers/: batch_operation_manager.py  header_footer_manager.py  table_operation_manager.py  validation_manager.py
skill/: SKILL.md
